# realsense2_gz_description

./: .pre-commit-config.yaml  LICENSE.txt  README.md  package.xml
gz_camera_macros/: CMakeLists.txt  README.md  package.xml
gz_camera_macros/urdf/: depth_camera.gazebo.xacro  rgb_camera.gazebo.xacro  rgbd_camera.gazebo.xacro
launch/: example_realsense_gazebo.launch.py
orbbec_gz_description/: CMakeLists.txt  README.md  package.xml
orbbec_gz_description/launch/: example_orbbec_gazebo.launch.py
orbbec_gz_description/rviz/: example.rviz
orbbec_gz_description/urdf/: example_335Le_gazebo.urdf.xacro  gemini335L_336Lgazebo.xacro  gemini335Le.gazebo.xacro
realsense2_gz_description/: CMakeLists.txt  README.md  package.xml
realsense2_gz_description/launch/: example_realsense_gazebo.launch.py
realsense2_gz_description/rviz/: example.rviz
realsense2_gz_description/urdf/: _d405.gazebo.xacro  _d415.gazebo.xacro  _d435.gazebo.xacro  _d455.gazebo.xacro  example_d415_gazebo.urdf.xacro
rviz/: example.rviz
urdf/: _d405.gazebo.xacro  _d415.gazebo.xacro  _d435.gazebo.xacro  _d455.gazebo.xacro  example_d415_gazebo.urdf.xacro  rgb_camera.gazebo.xacro  rgbd_camera.gazebo.xacro
world/: example.sdf
