<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense2_gz_description</name>
  <version>0.0.1</version>
  <description>URDF xacro(s) that enable simulating Realsense Cameras in Gazebo</description>
  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>realsense2_description</depend>
  <depend>gz_camera_macros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <!-- <depend>rviz2</depend> --> <!-- Required to run example launch file -->
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
